--- a/src/App.css
+++ b/src/App.css
@@ -68,9 +68,9 @@
   border: 2px solid black;
     padding: 4px 11px 6px 11px;
     font-size: 23px;
-    background-color: black;
+    background-color:rgb(71, 61, 61);
     color: white;
-    border-radius: 4px;
+    border-radius: 10px;
     font-weight: 700;
     font-family: inherit;
 }
@@ -78,8 +78,9 @@
   width: 74%;
 }
 .home .detail button:hover{
+  border-color: white;
   background-color: red;
-  transition: all 0.7s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 .button{
   margin-top: 3rem;
